--- a/sed_locatable/PageAbout.html
+++ b/sed_locatable/PageAbout.html
@@ -54,7 +54,7 @@
 		</div>
 		<br>
 		<a href="#solution", style="text-decoration:none;color:#fff;">
-			<div style="background-color:#0274be;padding-top:16px;padding-bottom:16px;padding-right:30px;padding-left:30px;margin:auto;">
+			<div class="bbtn button">
 				Naša rešitev
 			</div>
 		</a>
