--- a/sed_locatable/PageSolution.html
+++ b/sed_locatable/PageSolution.html
@@ -105,8 +105,8 @@
 			</a>
 		</div>
 		<br><br><br>
-		<a href="#donate", style="text-decoration:none;color:#fff;">
-			<div style="background-color:#00E160;padding-top:16px;padding-bottom:16px;padding-right:30px;padding-left:30px;margin:auto;">
+		<a href="https://www.paypal.com/donate/?hosted_button_id=T9EP9SQ867KBE" target="_blank" style="text-decoration:none;color:#fff;">
+			<div class="gbtn button">
 				Doniraj
 			</div>
 		</a>
