--- a/sed_locatable/PageHome.html
+++ b/sed_locatable/PageHome.html
@@ -16,7 +16,7 @@
 <br>
 
 <a href="#about", style="text-decoration:none;color:#fff;">
-	<div style="background-color:#FFA600B3;padding-top:16px;padding-bottom:16px;padding-right:30px;padding-left:30px;margin:auto;">
+	<div class="obtn button">
 	SODELUJ
 	</div>
 </a>
@@ -48,7 +48,7 @@
 	</div>
 	<br>
 	<a href="#solution", style="text-decoration:none;color:#fff;">
-		<div style="background-color:#0274be;padding-top:16px;padding-bottom:16px;padding-right:30px;padding-left:30px;margin:auto;">
+		<div class="bbtn button">
 			Naša rešitev
 		</div>
 	</a>
