add donation site

--- a/frame.html
+++ b/frame.html
@@ -18,7 +18,7 @@
 			<a href="#">Domov</a>
 			<a href="#about">O nas</a>
 			<a href="#solution">Naša rešitev</a>
-			<a href="https://www.paypal.com/donate/?hosted_button_id=T9EP9SQ867KBE" target="_blank">Doniraj</a>
+			<a href="#donate" target="_blank">Doniraj</a>
 		</div>
 	</div>
 </header>
