--- a/sed_locatable/PageSolution.html
+++ b/sed_locatable/PageSolution.html
@@ -105,7 +105,7 @@
 			</a>
 		</div>
 		<br><br><br>
-		<a href="https://www.paypal.com/donate/?hosted_button_id=T9EP9SQ867KBE" target="_blank" style="text-decoration:none;color:#fff;">
+		<a href="#donate" target="_blank" style="text-decoration:none;color:#fff;">
 			<div class="gbtn button">
 				Doniraj
 			</div>
