--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 	ZA VAS IMAMO REŠITEV PRED VSAKODNEVNIMI
 </h2>
 <h2 style="color:#fff;">
-	ONESNAŽEVALCI NAŠEGA OZRAČJA
+	ONESNAŽEVALCI NAŠEGA <i style="color:#FF69B4;text-decoration:line-through;">OZRAČJA</i> SVETA
 </h2>
 <br>
 
@@ -69,11 +69,11 @@
 </a>
 <div style="background-color:#fff;padding-bottom:20px;">
 	<h1 style="padding-top:20px;">
-		NAŠLI SMO HITRO REŠITEV
+		ZASTOPAMO NAJHITREJŠO REŠITEV
 	</h1>
 	<div class="text-con">
 	<a class="text-con">
-		Kot Naravovarstveno društvo za vas ustvarjamo po neprofitnih cenah enoto za v kurilnico, ki je bistvenega pomena za enostavno vzdrževanje stavbnih gospodinjstev, ter zdravja narave. Kot voda in elektrika ključnega pomena za obratovanje prostorske funkcionalnosti, postaja z napravo gospodinjstvo tudi preskrbljeno z ogrevanjem in gorivom za mobilnost. Uporabljamo lahko alternativno rešitev, saj med samim procesom enota proizvaja toploto za dom, kar pomeni, da smo kot potrošnik energije razbremenili drago kurjavo, ter si pridobili lasten vir ustvarjanja el. energije za potrebe vzdrževanja gospodinjstva, naprav ali avtomobilov.
+		Kot Naravovarstveno društvo za vas ustvarjamo najcenejšo enoto za v kurilnico, financirano iz donacij! BREZ kapitalističnih investicij NO PROFIT ! Ki je bistvenega pomena za enostavno vzdrževanje stavbnih gospodinjstev, ter zdravja narave. Kot voda in elektrika ključnega pomena za obratovanje prostorske funkcionalnosti, postaja z napravo gospodinjstvo tudi preskrbljeno z ogrevanjem in gorivom za mobilnost. Uporabljamo lahko alternativno rešitev, saj med samim procesom enota proizvaja toploto za dom, kar pomeni, da smo kot potrošnik energije razbremenili drago kurjavo, ter si pridobili lasten vir ustvarjanja el. energije za potrebe vzdrževanja gospodinjstva, naprav ali avtomobilov.
 	</a>
 	</div>
 	<h1 style="padding-top:20px;">
@@ -81,7 +81,7 @@
 	</h1>
 	<div class="text-con">
 		<a class="text-con">
-			Dom kot lastna “črpalka” za osnovne potrebe mobilnosti deluje ogromno manj onesnažujoče kot trenutne alternativne izbire na poti.
+			Dom kot lastna “črpalka” za osnovne potrebe mobilnosti deluje 100% manj onesnažujoče v vseh pogledih kot trenutne alternativne izbire na poti.
 		</a>
 	</div>
 	<h1 style="padding-top:20px;">
@@ -90,7 +90,7 @@
 	<div class="text-con">
 		<a class="text-con">
 			V tako ogromni adaptaciji izdelave vozil na pogon s pomočjo vodika lahko pričakujemo prenovo strukturne uporabe mobilosti.
-			Gorivo pa lahko pridobimo doma za svoje potrebe mobilnosti z okolju prijaznimi izpušnimi plini.
+			Gorivo pa lahko pridobimo sami doma za svoje potrebe po energiji z okolju prijaznimi izpušnimi plini.
 		</a>
 	</div>
 	<br>
@@ -205,7 +205,9 @@
 		<div class="text-con">
 			<a class="text-con">
 
-				Za električno oskrbo objektov nam je že vsem jasno, da so najboljša izbira solarne celice hkrati pa večina avtomobilne industrije preklaplja izdelavo svojih vozil na električne. To pomeni, da imajo vozniki električnih avtomobilov svojo točko polnjenja doma.
+				Za električno oskrbo domačih objektov nam je že vsem jasno, da je najboljša naravna energija hkrati pa večina avtomobilne industrije preklaplja izdelavo svojih vozil na električne motorje. To pomeni, da imajo vozniki električnih avtomobilov svojo točko polnjenja doma s samooskrbo.
+<br><br>
+				Še večji plus pa je predelava motorjev z notranjim izgorevanjem na energen Vodik.
 <br><br>
 				Kaj pa to pomeni za gorivo?
 <br><br>
@@ -241,7 +243,7 @@
 				Vir električne energije
 				</h1>
 				<h3 style="padding-top:20px;color:#888;">
-				Vir električne oskrne gospodinjstva
+				Vir električne oskrbe gospodinjstva
 				 </h3>
 			</span>
 		</div><br><br>
@@ -278,19 +280,19 @@
 			</a>
 		</div>
 		<h2 style="padding-top:20px;">
-			Dimnik kisika
-		</h2>
-		<div class="text-con">
-			<a class="text-con">
-				Med samim procesom elektrolize se molekule vode razdvojijo v vodik in kisik. Kisik, ki nastaja v napravi lahko napeljemo v hranjenje v jeklenko ali ga izpustimo čez dimnik.
-			</a>
-		</div>
-		<h2 style="padding-top:20px;">
 			Tvorbo lastnega goriva
 		</h2>
 		<div class="text-con">
 			<a class="text-con">
-				Vodik, ki nastane med procesom elektrolize lahko hranimo in si doma polnimo rezervoar, ki lahko poskrbi za mobilnost naših vozik na vodik, ki so okolju prijazne.
+				Vodik in kisik, ki nastaneta med procesom elektrolize lahko hranimo in si doma polnimo rezervoar, ki lahko poskrbi za mobilnost naših vozil na vodik, ki so okolju prijazni.
+			</a>
+		</div>
+		<h2 style="padding-top:20px;">
+			Prodajo O2 in 2H2
+		</h2>
+		<div class="text-con">
+			<a class="text-con">
+				Seveda lahko prodamo odvečne količine plinov, ki jih sami ne moremo potrošiti bodočim distributerjem.
 			</a>
 		</div>
 		<br><br><br>
@@ -328,13 +330,11 @@
 		<a class="text-con">
 			Če ste tudi vi zavzeti za zdravo okolje in naravo se pridružite projektu saj je<br>
 			lepša prihodnost pred nami če sodelujemo skupaj.
-			<br><br>
-			Vsaka donacija bo zabeležena za visoko vrednostne ugodnosti v bližnji prihodnosti!
 		</a><br><br>
 		<h3>
 			Naravovarstveno društvo Hrowat<br>
 			Šarhova ulica 7<br>
-			3210 Sl. Konjice<br>
+			3210 Slovenske Konjice<br>
 			TRR / IBAN : SI56 6100 0002 3385 592<br>
 			BIC - HDELSI22
 		</h3>
