--- a/sed_locatable/PageDonate.html
+++ b/sed_locatable/PageDonate.html
@@ -12,13 +12,11 @@
 		<a class="text-con">
 			Če ste tudi vi zavzeti za zdravo okolje in naravo se pridružite projektu saj je<br>
 			lepša prihodnost pred nami če sodelujemo skupaj.
-			<br><br>
-			Vsaka donacija bo zabeležena za visoko vrednostne ugodnosti v bližnji prihodnosti!
 		</a><br><br>
 		<h3>
 			Naravovarstveno društvo Hrowat<br>
 			Šarhova ulica 7<br>
-			3210 Sl. Konjice<br>
+			3210 Slovenske Konjice<br>
 			TRR / IBAN : SI56 6100 0002 3385 592<br>
 			BIC - HDELSI22
 		</h3>
