--- a/sed_locatable/PageHome.html
+++ b/sed_locatable/PageHome.html
@@ -11,7 +11,7 @@
 	ZA VAS IMAMO REŠITEV PRED VSAKODNEVNIMI
 </h2>
 <h2 style="color:#fff;">
-	ONESNAŽEVALCI NAŠEGA OZRAČJA
+	ONESNAŽEVALCI NAŠEGA <i style="color:#FF69B4;text-decoration:line-through;">OZRAČJA</i> SVETA
 </h2>
 <br>
 
@@ -22,11 +22,11 @@
 </a>
 <div style="background-color:#fff;padding-bottom:20px;">
 	<h1 style="padding-top:20px;">
-		NAŠLI SMO HITRO REŠITEV
+		ZASTOPAMO NAJHITREJŠO REŠITEV
 	</h1>
 	<div class="text-con">
 	<a class="text-con">
-		Kot Naravovarstveno društvo za vas ustvarjamo po neprofitnih cenah enoto za v kurilnico, ki je bistvenega pomena za enostavno vzdrževanje stavbnih gospodinjstev, ter zdravja narave. Kot voda in elektrika ključnega pomena za obratovanje prostorske funkcionalnosti, postaja z napravo gospodinjstvo tudi preskrbljeno z ogrevanjem in gorivom za mobilnost. Uporabljamo lahko alternativno rešitev, saj med samim procesom enota proizvaja toploto za dom, kar pomeni, da smo kot potrošnik energije razbremenili drago kurjavo, ter si pridobili lasten vir ustvarjanja el. energije za potrebe vzdrževanja gospodinjstva, naprav ali avtomobilov.
+		Kot Naravovarstveno društvo za vas ustvarjamo najcenejšo enoto za v kurilnico, financirano iz donacij! BREZ kapitalističnih investicij NO PROFIT ! Ki je bistvenega pomena za enostavno vzdrževanje stavbnih gospodinjstev, ter zdravja narave. Kot voda in elektrika ključnega pomena za obratovanje prostorske funkcionalnosti, postaja z napravo gospodinjstvo tudi preskrbljeno z ogrevanjem in gorivom za mobilnost. Uporabljamo lahko alternativno rešitev, saj med samim procesom enota proizvaja toploto za dom, kar pomeni, da smo kot potrošnik energije razbremenili drago kurjavo, ter si pridobili lasten vir ustvarjanja el. energije za potrebe vzdrževanja gospodinjstva, naprav ali avtomobilov.
 	</a>
 	</div>
 	<h1 style="padding-top:20px;">
@@ -34,7 +34,7 @@
 	</h1>
 	<div class="text-con">
 		<a class="text-con">
-			Dom kot lastna “črpalka” za osnovne potrebe mobilnosti deluje ogromno manj onesnažujoče kot trenutne alternativne izbire na poti.
+			Dom kot lastna “črpalka” za osnovne potrebe mobilnosti deluje 100% manj onesnažujoče v vseh pogledih kot trenutne alternativne izbire na poti.
 		</a>
 	</div>
 	<h1 style="padding-top:20px;">
@@ -43,7 +43,7 @@
 	<div class="text-con">
 		<a class="text-con">
 			V tako ogromni adaptaciji izdelave vozil na pogon s pomočjo vodika lahko pričakujemo prenovo strukturne uporabe mobilosti.
-			Gorivo pa lahko pridobimo doma za svoje potrebe mobilnosti z okolju prijaznimi izpušnimi plini.
+			Gorivo pa lahko pridobimo sami doma za svoje potrebe po energiji z okolju prijaznimi izpušnimi plini.
 		</a>
 	</div>
 	<br>
