--- a/sed_locatable/PageSolution.html
+++ b/sed_locatable/PageSolution.html
@@ -16,7 +16,9 @@
 		<div class="text-con">
 			<a class="text-con">
 
-				Za električno oskrbo objektov nam je že vsem jasno, da so najboljša izbira solarne celice hkrati pa večina avtomobilne industrije preklaplja izdelavo svojih vozil na električne. To pomeni, da imajo vozniki električnih avtomobilov svojo točko polnjenja doma.
+				Za električno oskrbo domačih objektov nam je že vsem jasno, da je najboljša naravna energija hkrati pa večina avtomobilne industrije preklaplja izdelavo svojih vozil na električne motorje. To pomeni, da imajo vozniki električnih avtomobilov svojo točko polnjenja doma s samooskrbo.
+<br><br>
+				Še večji plus pa je predelava motorjev z notranjim izgorevanjem na energen Vodik.
 <br><br>
 				Kaj pa to pomeni za gorivo?
 <br><br>
@@ -52,7 +54,7 @@
 				Vir električne energije
 				</h1>
 				<h3 style="padding-top:20px;color:#888;">
-				Vir električne oskrne gospodinjstva
+				Vir električne oskrbe gospodinjstva
 				 </h3>
 			</span>
 		</div><br><br>
@@ -89,19 +91,19 @@
 			</a>
 		</div>
 		<h2 style="padding-top:20px;">
-			Dimnik kisika
-		</h2>
-		<div class="text-con">
-			<a class="text-con">
-				Med samim procesom elektrolize se molekule vode razdvojijo v vodik in kisik. Kisik, ki nastaja v napravi lahko napeljemo v hranjenje v jeklenko ali ga izpustimo čez dimnik.
-			</a>
-		</div>
-		<h2 style="padding-top:20px;">
 			Tvorbo lastnega goriva
 		</h2>
 		<div class="text-con">
 			<a class="text-con">
-				Vodik, ki nastane med procesom elektrolize lahko hranimo in si doma polnimo rezervoar, ki lahko poskrbi za mobilnost naših vozik na vodik, ki so okolju prijazne.
+				Vodik in kisik, ki nastaneta med procesom elektrolize lahko hranimo in si doma polnimo rezervoar, ki lahko poskrbi za mobilnost naših vozil na vodik, ki so okolju prijazni.
+			</a>
+		</div>
+		<h2 style="padding-top:20px;">
+			Prodajo O2 in 2H2
+		</h2>
+		<div class="text-con">
+			<a class="text-con">
+				Seveda lahko prodamo odvečne količine plinov, ki jih sami ne moremo potrošiti bodočim distributerjem.
 			</a>
 		</div>
 		<br><br><br>
