--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 	</h1>
 	<div class="text-con">
 	<a class="text-con">
-		Kot Naravovarstveno društvo za vas ustvarjamo najcenejšo enoto za v kurilnico, financirano iz donacij! BREZ kapitalističnih investicij NO PROFIT ! Ki je bistvenega pomena za enostavno vzdrževanje stavbnih gospodinjstev, ter zdravja narave. Kot voda in elektrika ključnega pomena za obratovanje prostorske funkcionalnosti, postaja z napravo gospodinjstvo tudi preskrbljeno z ogrevanjem in gorivom za mobilnost. Uporabljamo lahko alternativno rešitev, saj med samim procesom enota proizvaja toploto za dom, kar pomeni, da smo kot potrošnik energije razbremenili drago kurjavo, ter si pridobili lasten vir ustvarjanja el. energije za potrebe vzdrževanja gospodinjstva, naprav ali avtomobilov.
+		Kot Naravovarstveno društvo za vas ustvarjamo najcenejšo enoto za v kurilnico, financirano iz donacij! BREZ kapitalističnih investicij NO PROFIT ! Ki je bistvenega pomena za enostavno vzdrževanje stavbnih gospodinjstev, ter zdravja narave. Kot voda in elektrika ključnega pomena za obratovanje prostorske funkcionalnosti, postaja z napravo gospodinjstvo tudi preskrbuje z ogrevanjem in gorivom za mobilnost. Uporabljamo lahko alternativno rešitev, saj med samim procesom enota proizvaja toploto za dom, kar pomeni, da smo kot potrošnik energije razbremenili drago kurjavo, ter si pridobili lasten vir ustvarjanja el. energije na zalogo za potrebe vzdrževanja gospodinjstva, naprav ali avtomobilov.
 	</a>
 	</div>
 	<h1 style="padding-top:20px;">
@@ -211,7 +211,7 @@
 <br><br>
 				Kaj pa to pomeni za gorivo?
 <br><br>
-				Edino pozitivno potencialno nadomestilo današnjih goriv je vodik, najpogostejši element v vesolju za katerega smo našli način pridobivanja v lastnem domu. To pomeni, da namesto vožnje do bencinske postaje lahko napolnite rezervoar vozila na vodik doma.
+				Edino pozitivno potencialno nadomestilo današnjih goriv je vodik, najpogostejši element v vesolju za katerega zastopamo pridobivanje kar v lastnem domu. To pomeni, da namesto vožnje do bencinske postaje lahko napolnite rezervoar vozila na vodik doma.
 
 			</a>
 		</div>
@@ -331,6 +331,7 @@
 			Če ste tudi vi zavzeti za zdravo okolje in naravo se pridružite projektu saj je<br>
 			lepša prihodnost pred nami če sodelujemo skupaj.
 		</a><br><br>
+		<h2>Dobrodošli !</h2>
 		<h3>
 			Naravovarstveno društvo Hrowat<br>
 			Šarhova ulica 7<br>
