--- a/sed_locatable/PageDonate.html
+++ b/sed_locatable/PageDonate.html
@@ -13,6 +13,7 @@
 			Če ste tudi vi zavzeti za zdravo okolje in naravo se pridružite projektu saj je<br>
 			lepša prihodnost pred nami če sodelujemo skupaj.
 		</a><br><br>
+		<h2>Dobrodošli !</h2>
 		<h3>
 			Naravovarstveno društvo Hrowat<br>
 			Šarhova ulica 7<br>
