--- a/sed_locatable/PageHome.html
+++ b/sed_locatable/PageHome.html
@@ -26,7 +26,7 @@
 	</h1>
 	<div class="text-con">
 	<a class="text-con">
-		Kot Naravovarstveno društvo za vas ustvarjamo najcenejšo enoto za v kurilnico, financirano iz donacij! BREZ kapitalističnih investicij NO PROFIT ! Ki je bistvenega pomena za enostavno vzdrževanje stavbnih gospodinjstev, ter zdravja narave. Kot voda in elektrika ključnega pomena za obratovanje prostorske funkcionalnosti, postaja z napravo gospodinjstvo tudi preskrbljeno z ogrevanjem in gorivom za mobilnost. Uporabljamo lahko alternativno rešitev, saj med samim procesom enota proizvaja toploto za dom, kar pomeni, da smo kot potrošnik energije razbremenili drago kurjavo, ter si pridobili lasten vir ustvarjanja el. energije za potrebe vzdrževanja gospodinjstva, naprav ali avtomobilov.
+		Kot Naravovarstveno društvo za vas ustvarjamo najcenejšo enoto za v kurilnico, financirano iz donacij! BREZ kapitalističnih investicij NO PROFIT ! Ki je bistvenega pomena za enostavno vzdrževanje stavbnih gospodinjstev, ter zdravja narave. Kot voda in elektrika ključnega pomena za obratovanje prostorske funkcionalnosti, postaja z napravo gospodinjstvo tudi preskrbuje z ogrevanjem in gorivom za mobilnost. Uporabljamo lahko alternativno rešitev, saj med samim procesom enota proizvaja toploto za dom, kar pomeni, da smo kot potrošnik energije razbremenili drago kurjavo, ter si pridobili lasten vir ustvarjanja el. energije na zalogo za potrebe vzdrževanja gospodinjstva, naprav ali avtomobilov.
 	</a>
 	</div>
 	<h1 style="padding-top:20px;">
