--- a/sed_locatable/PageSolution.html
+++ b/sed_locatable/PageSolution.html
@@ -22,7 +22,7 @@
 <br><br>
 				Kaj pa to pomeni za gorivo?
 <br><br>
-				Edino pozitivno potencialno nadomestilo današnjih goriv je vodik, najpogostejši element v vesolju za katerega smo našli način pridobivanja v lastnem domu. To pomeni, da namesto vožnje do bencinske postaje lahko napolnite rezervoar vozila na vodik doma.
+				Edino pozitivno potencialno nadomestilo današnjih goriv je vodik, najpogostejši element v vesolju za katerega zastopamo pridobivanje kar v lastnem domu. To pomeni, da namesto vožnje do bencinske postaje lahko napolnite rezervoar vozila na vodik doma.
 
 			</a>
 		</div>
